--- a/Med-main/Med-main/VisualMedicare/html/atualizarConsulta.html
+++ b/Med-main/Med-main/VisualMedicare/html/atualizarConsulta.html
@@ -99,3 +99,15 @@
             </fieldset>
 
             <div class="form-actions">
+                <button type="submit" class="btn-primary">
+                    <i class="fas fa-sync-alt"></i> Atualizar Consulta
+                </button>
+                <a href="../html/dashboard.html" class="btn-secondary">Cancelar</a>
+            </div>
+        </form>
+
+    </div>
+
+</body>
+
+</html>
