--- a/Med-main/Med-main/VisualMedicare/html/cadastroPaciente.html
+++ b/Med-main/Med-main/VisualMedicare/html/cadastroPaciente.html
@@ -48,7 +48,7 @@
             </fieldset>
 
             <fieldset class="form-group-grid">
-                <legend>Contato e Endereço</legend>
+                <legend>Contato</legend>
                 
                 <div class="form-field">
                     <label for="telefone">Telefone</label>
@@ -63,14 +63,6 @@
                     <div class="input-with-icon">
                         <i class="fas fa-envelope"></i>
                         <input type="email" id="email" name="email" placeholder="nome@exemplo.com">
-                    </div>
-                </div>
-
-                <div class="form-field full-width-field">
-                    <label for="endereco">Endereço Completo</label>
-                    <div class="input-with-icon">
-                        <i class="fas fa-map-marker-alt"></i>
-                        <input type="text" id="endereco" name="endereco" placeholder="Rua, Número, Bairro, Cidade - UF">
                     </div>
                 </div>
             </fieldset>
