--- a/html/consulta.html
+++ b/html/consulta.html
@@ -109,8 +109,8 @@
                                     <td>Sala 1</td>
                                     <td>Consulta de rotina</td>
                                      <td class="actions">
-                                        <a href="../html/atualizarPagamento.html" class="action-icon info-icon"><i class="fas fa-pencil-alt"></i></a>
-                                        <a href="../html/atualizarPagamento.html" class="action-icon edit-icon"><i class="fas fa-times"></i></a>
+                                        <a href="../html/atualizarConsulta.html" class="action-icon info-icon"><i class="fas fa-pencil-alt"></i></a>
+                                        <a href="../html/Deletar/deletarConsulta.html" class="action-icon edit-icon"><i class="fas fa-times"></i></a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -123,8 +123,8 @@
                                     <td>Sala 2</td>
                                     <td>Acompanhamento dermatológico</td>
                                      <td class="actions">
-                                        <a href="../html/atualizarPagamento.html" class="action-icon info-icon"><i class="fas fa-pencil-alt"></i></a>
-                                        <a href="../html/atualizarPagamento.html" class="action-icon edit-icon"><i class="fas fa-times"></i></a>
+                                        <a href="../html/atualizarConsulta.html" class="action-icon info-icon"><i class="fas fa-pencil-alt"></i></a>
+                                        <a href="../html/Deletar/deletarConsulta.html" class="action-icon edit-icon"><i class="fas fa-times"></i></a>
                                     </td>
                                 </tr>
                             </tbody>
