--- a/html/pacientes.html
+++ b/html/pacientes.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MediCare - Gerenciar Receitas</title>
-    <link rel="stylesheet" href="../css/gerenciamento.css">
-    <link rel="stylesheet" href="../css/receitas.css">
+    <title>MediCare - Gerenciar Pacientes</title>
+    <link rel="stylesheet" href="../css/gerenciamento.css"> 
+    <link rel="stylesheet" href="../css/pacientes.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-
 <body>
     <div class="app-container">
         <aside class="sidebar">
@@ -24,7 +22,7 @@
                     <li class="nav-item">
                         <a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a href="pacientes.html"><i class="fas fa-user-injured"></i> Pacientes</a>
                     </li>
                     <li class="nav-item">
@@ -36,7 +34,7 @@
                     <li class="nav-item">
                         <a href="pagamento.html"><i class="fas fa-file-invoice-dollar"></i> Pagamentos</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a href="receitas.html"><i class="fas fa-file-prescription"></i> Receitas</a>
                     </li>
                     <li class="nav-item">
@@ -57,7 +55,7 @@
             <header class="page-header">
                 <div class="header-text">
                     <h1>Painel Administrativo</h1>
-                    <p>Gerencie receitas e prescrições</p>
+                    <p>Gerencie informações dos pacientes</p>
                 </div>
                 <div class="header-profile">
                     <span class="notification-badge">2</span>
@@ -71,43 +69,18 @@
             <section class="management-card">
                 <div class="management-header">
                     <div class="title-section">
-                        <h2>Receitas Médicas</h2>
-                        <p>Gerencie receitas e prescrições</p>
+                        <h2>Lista de Pacientes</h2>
+                        <p>Total de 1,247 pacientes registrados</p>
                     </div>
                     <button class="btn-primary new-item-btn">
-                        <a href="../html/cadastroReceita.html" class="fas fa-user-plus"></a> Novo Paciente
+                        <a href="../html/cadastroPaciente.html" class="fas fa-user-plus"></a> Novo Paciente
                     </button>
                 </div>
-
-                <div class="payment-summary-grid recipe-summary-grid">
-                    <div class="summary-card">
-                        <div class="card-content">
-                            <h4>Total de Receitas</h4>
-                            <span class="summary-value primary">2</span>
-                        </div>
-                        <div class="card-icon blue"><i class="fas fa-file-alt"></i></div>
-                    </div>
-                    <div class="summary-card">
-                        <div class="card-content">
-                            <h4>Vencendo em 7 dias</h4>
-                            <span class="summary-value pending">0</span>
-                        </div>
-                        <div class="card-icon yellow"><i class="fas fa-exclamation-triangle"></i></div>
-                    </div>
-                    <div class="summary-card">
-                        <div class="card-content">
-                            <h4>Vencidas</h4>
-                            <span class="summary-value error">2</span>
-                        </div>
-                        <div class="card-icon red"><i class="fas fa-times-circle"></i></div>
-                    </div>
-                </div>
-
+                
                 <div class="data-section">
-                    <h3>Lista de Receitas</h3>
                     <div class="search-bar">
                         <i class="fas fa-search"></i>
-                        <input type="text" placeholder="Buscar por paciente, médico ou medi...">
+                        <input type="text" placeholder="Buscar por nome, CPF ou telefone...">
                     </div>
 
                     <div class="table-container">
@@ -115,47 +88,49 @@
                             <thead>
                                 <tr>
                                     <th>ID</th>
-                                    <th>CONSULTA</th>
-                                    <th>PACIENTE</th>
-                                    <th>MÉDICO</th>
-                                    <th>MEDICAMENTO</th>
-                                    <th>DATA EMISSÃO</th>
-                                    <th>VALIDADE</th>
-                                    <th>STATUS</th>
+                                    <th>NOME</th>
+                                    <th>CPF</th>
+                                    <th>DATA NASC.</th>
+                                    <th>TELEFONE</th>
+                                    <th>ÚLTIMA CONSULTA</th>
                                     <th>AÇÕES</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>1</td>
-                                    <td>#1</td>
                                     <td class="main-info">Maria Silva Santos</td>
-                                    <td>Dr. João Santos</td>
-                                    <td>Losartana 50mg</td>
-                                    <td>14/09/2024</td>
-                                    <td>14/12/2024</td>
-                                    <td><span class="status-badge vencida">Vencida</span></td>
+                                    <td>123.456.789-00</td>
+                                    <td>10/05/1985</td>
+                                    <td>(11) 98765-4321</td>
+                                    <td>15/09/2024</td>
                                     <td class="actions">
-                                        <a href="../html/atualizarPagamento.html" class="action-icon info-icon"><i
-                                                class="fas fa-pencil-alt"></i></a>
-                                        <a href="../html/atualizarPagamento.html" class="action-icon edit-icon"><i
-                                                class="fas fa-times"></i></a>
+                                        <a href="../html/atualizarPaciente.html" class="action-icon info-icon"><i class="fas fa-pencil-alt"></i></a>
+                                        <a href="../html/Deletar/deletarPaciente.html" class="action-icon edit-icon"><i class="fas fa-times"></i></a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>2</td>
-                                    <td>#2</td>
                                     <td class="main-info">João Pedro Costa</td>
-                                    <td>Dra. Ana Lima</td>
-                                    <td>Protetor Solar FPS 60</td>
-                                    <td>14/09/2024</td>
-                                    <td>14/10/2024</td>
-                                    <td><span class="status-badge vencida">Vencida</span></td>
-                                    <td class="actions">
-                                        <a href="../html/atualizarPagamento.html" class="action-icon info-icon"><i
-                                                class="fas fa-pencil-alt"></i></a>
-                                        <a href="../html/atualizarPagamento.html" class="action-icon edit-icon"><i
-                                                class="fas fa-times"></i></a>
+                                    <td>987.654.321-11</td>
+                                    <td>03/12/2000</td>
+                                    <td>(21) 99876-5432</td>
+                                    <td>20/08/2024</td>
+                                   <td class="actions">
+                                        <a href="../html/atualizarPaciente.html" class="action-icon info-icon"><i class="fas fa-pencil-alt"></i></a>
+                                        <a href="../html/Deletar/deletarPaciente.html" class="action-icon edit-icon"><i class="fas fa-times"></i></a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td class="main-info">Ana Oliveira</td>
+                                    <td>456.789.012-22</td>
+                                    <td>25/01/1992</td>
+                                    <td>(31) 97654-3210</td>
+                                    <td>01/10/2024</td>
+                                     <td class="actions">
+                                        <a href="../html/atualizarPaciente.html" class="action-icon info-icon"><i class="fas fa-pencil-alt"></i></a>
+                                        <a href="../html/Deletar/deletarPaciente.html" class="action-icon edit-icon"><i class="fas fa-times"></i></a>
                                     </td>
                                 </tr>
                             </tbody>
@@ -166,5 +141,4 @@
         </main>
     </div>
 </body>
-
 </html>
