--- a/html/receitas.html
+++ b/html/receitas.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MediCare - Gerenciar Médicos</title>
-    <link rel="stylesheet" href="../css/gerenciamento.css"> 
-    <link rel="stylesheet" href="../css/medicos.css"> 
+    <title>MediCare - Gerenciar Receitas</title>
+    <link rel="stylesheet" href="../css/gerenciamento.css">
+    <link rel="stylesheet" href="../css/receitas.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
     <div class="app-container">
         <aside class="sidebar">
@@ -25,7 +27,7 @@
                     <li class="nav-item">
                         <a href="pacientes.html"><i class="fas fa-user-injured"></i> Pacientes</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a href="medicos.html"><i class="fas fa-user-md"></i> Médicos</a>
                     </li>
                     <li class="nav-item">
@@ -34,7 +36,7 @@
                     <li class="nav-item">
                         <a href="pagamento.html"><i class="fas fa-file-invoice-dollar"></i> Pagamentos</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a href="receitas.html"><i class="fas fa-file-prescription"></i> Receitas</a>
                     </li>
                     <li class="nav-item">
@@ -55,7 +57,7 @@
             <header class="page-header">
                 <div class="header-text">
                     <h1>Painel Administrativo</h1>
-                    <p>Cadastre e gerencie médicos</p>
+                    <p>Gerencie receitas e prescrições</p>
                 </div>
                 <div class="header-profile">
                     <span class="notification-badge">2</span>
@@ -69,18 +71,43 @@
             <section class="management-card">
                 <div class="management-header">
                     <div class="title-section">
-                        <h2>Lista de Médicos</h2>
-                        <p>Total de 23 médicos ativos</p>
+                        <h2>Receitas Médicas</h2>
+                        <p>Gerencie receitas e prescrições</p>
                     </div>
                     <button class="btn-primary new-item-btn">
-                        <a href="../html/cadastroMedico.html" class="fas fa-user-plus"></a> Novo Médico
+                        <a href="../html/cadastroReceita.html" class="fas fa-user-plus"></a> Novo Paciente
                     </button>
                 </div>
-                
+
+                <div class="payment-summary-grid recipe-summary-grid">
+                    <div class="summary-card">
+                        <div class="card-content">
+                            <h4>Total de Receitas</h4>
+                            <span class="summary-value primary">2</span>
+                        </div>
+                        <div class="card-icon blue"><i class="fas fa-file-alt"></i></div>
+                    </div>
+                    <div class="summary-card">
+                        <div class="card-content">
+                            <h4>Vencendo em 7 dias</h4>
+                            <span class="summary-value pending">0</span>
+                        </div>
+                        <div class="card-icon yellow"><i class="fas fa-exclamation-triangle"></i></div>
+                    </div>
+                    <div class="summary-card">
+                        <div class="card-content">
+                            <h4>Vencidas</h4>
+                            <span class="summary-value error">2</span>
+                        </div>
+                        <div class="card-icon red"><i class="fas fa-times-circle"></i></div>
+                    </div>
+                </div>
+
                 <div class="data-section">
+                    <h3>Lista de Receitas</h3>
                     <div class="search-bar">
                         <i class="fas fa-search"></i>
-                        <input type="text" placeholder="Buscar por nome, CRM ou especialidade...">
+                        <input type="text" placeholder="Buscar por paciente, médico ou medi...">
                     </div>
 
                     <div class="table-container">
@@ -88,10 +115,12 @@
                             <thead>
                                 <tr>
                                     <th>ID</th>
-                                    <th>NOME</th>
-                                    <th>CRM</th>
-                                    <th>ESPECIALIDADE</th>
-                                    <th>TELEFONE</th>
+                                    <th>CONSULTA</th>
+                                    <th>PACIENTE</th>
+                                    <th>MÉDICO</th>
+                                    <th>MEDICAMENTO</th>
+                                    <th>DATA EMISSÃO</th>
+                                    <th>VALIDADE</th>
                                     <th>STATUS</th>
                                     <th>AÇÕES</th>
                                 </tr>
@@ -99,38 +128,34 @@
                             <tbody>
                                 <tr>
                                     <td>1</td>
-                                    <td class="main-info">Dr. João Santos</td>
-                                    <td>CRM/SP 123456</td>
-                                    <td>Cardiologia</td>
-                                    <td>(11) 98765-4321</td>
-                                    <td><span class="status-badge ativo">Ativo</span></td>
-                                     <td class="actions">
-                                        <a href="../html/atualizarPagamento.html" class="action-icon info-icon"><i class="fas fa-pencil-alt"></i></a>
-                                        <a href="../html/atualizarPagamento.html" class="action-icon edit-icon"><i class="fas fa-times"></i></a>
+                                    <td>#1</td>
+                                    <td class="main-info">Maria Silva Santos</td>
+                                    <td>Dr. João Santos</td>
+                                    <td>Losartana 50mg</td>
+                                    <td>14/09/2024</td>
+                                    <td>14/12/2024</td>
+                                    <td><span class="status-badge vencida">Vencida</span></td>
+                                    <td class="actions">
+                                        <a href="../html/atualizarReceita.html" class="action-icon info-icon"><i
+                                                class="fas fa-pencil-alt"></i></a>
+                                        <a href="../html/Deletar/deletarReceita.html" class="action-icon edit-icon"><i
+                                                class="fas fa-times"></i></a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>2</td>
-                                    <td class="main-info">Dra. Ana Lima</td>
-                                    <td>CRM/RJ 654321</td>
-                                    <td>Dermatologia</td>
-                                    <td>(21) 99876-5432</td>
-                                    <td><span class="status-badge ativo">Ativo</span></td>
-                                     <td class="actions">
-                                        <a href="../html/atualizarPagamento.html" class="action-icon info-icon"><i class="fas fa-pencil-alt"></i></a>
-                                        <a href="../html/atualizarPagamento.html" class="action-icon edit-icon"><i class="fas fa-times"></i></a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>3</td>
-                                    <td class="main-info">Dr. Carlos Rocha</td>
-                                    <td>CRM/MG 456789</td>
-                                    <td>Neurologia</td>
-                                    <td>(31) 97654-3210</td>
-                                    <td><span class="status-badge inativo">Inativo</span></td>
+                                    <td>#2</td>
+                                    <td class="main-info">João Pedro Costa</td>
+                                    <td>Dra. Ana Lima</td>
+                                    <td>Protetor Solar FPS 60</td>
+                                    <td>14/09/2024</td>
+                                    <td>14/10/2024</td>
+                                    <td><span class="status-badge vencida">Vencida</span></td>
                                     <td class="actions">
-                                        <a href="../html/atualizarPagamento.html" class="action-icon info-icon"><i class="fas fa-pencil-alt"></i></a>
-                                        <a href="../html/atualizarPagamento.html" class="action-icon edit-icon"><i class="fas fa-times"></i></a>
+                                        <a href="../html/atualizarPagamento.html" class="action-icon info-icon"><i
+                                                class="fas fa-pencil-alt"></i></a>
+                                        <a href="../html/atualizarPagamento.html" class="action-icon edit-icon"><i
+                                                class="fas fa-times"></i></a>
                                     </td>
                                 </tr>
                             </tbody>
@@ -141,4 +166,5 @@
         </main>
     </div>
 </body>
+
 </html>
