--- a/html/medicos.html
+++ b/html/medicos.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MediCare - Gerenciar Pagamentos</title>
+    <title>MediCare - Gerenciar Médicos</title>
     <link rel="stylesheet" href="../css/gerenciamento.css"> 
-    <link rel="stylesheet" href="../css/pagamentos.css"> 
+    <link rel="stylesheet" href="../css/medicos.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -25,13 +25,13 @@
                     <li class="nav-item">
                         <a href="pacientes.html"><i class="fas fa-user-injured"></i> Pacientes</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a href="medicos.html"><i class="fas fa-user-md"></i> Médicos</a>
                     </li>
                     <li class="nav-item">
                         <a href="consulta.html"><i class="fas fa-calendar-check"></i> Consultas</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a href="pagamento.html"><i class="fas fa-file-invoice-dollar"></i> Pagamentos</a>
                     </li>
                     <li class="nav-item">
@@ -55,7 +55,7 @@
             <header class="page-header">
                 <div class="header-text">
                     <h1>Painel Administrativo</h1>
-                    <p>Controle pagamentos de consultas</p>
+                    <p>Cadastre e gerencie médicos</p>
                 </div>
                 <div class="header-profile">
                     <span class="notification-badge">2</span>
@@ -69,43 +69,18 @@
             <section class="management-card">
                 <div class="management-header">
                     <div class="title-section">
-                        <h2>Gerenciar Pagamentos</h2>
-                        <p>Controle pagamentos de consultas</p>
+                        <h2>Lista de Médicos</h2>
+                        <p>Total de 23 médicos ativos</p>
                     </div>
                     <button class="btn-primary new-item-btn">
-                        <a href="../html/cadastroPagamento.html" class="fas fa-user-plus"></a> Novo Pagamento
+                        <a href="../html/cadastroMedico.html" class="fas fa-user-plus"></a> Novo Médico
                     </button>
                 </div>
                 
-                <div class="payment-summary-grid">
-                    <div class="summary-card">
-                        <div class="card-content">
-                            <h4>Total Recebido</h4>
-                            <span class="summary-value success">R$ 150.00</span>
-                        </div>
-                        <div class="card-icon green"><i class="fas fa-money-bill-wave"></i></div>
-                    </div>
-                    <div class="summary-card">
-                        <div class="card-content">
-                            <h4>Total Pendente</h4>
-                            <span class="summary-value pending">R$ 200.00</span>
-                        </div>
-                        <div class="card-icon yellow"><i class="fas fa-wallet"></i></div>
-                    </div>
-                    <div class="summary-card">
-                        <div class="card-content">
-                            <h4>Total de Pagamentos</h4>
-                            <span class="summary-value primary">2</span>
-                        </div>
-                        <div class="card-icon blue"><i class="fas fa-receipt"></i></div>
-                    </div>
-                </div>
-
                 <div class="data-section">
-                    <h3>Lista de Pagamentos</h3>
                     <div class="search-bar">
                         <i class="fas fa-search"></i>
-                        <input type="text" placeholder="Buscar por paciente, médico ou forma...">
+                        <input type="text" placeholder="Buscar por nome, CRM ou especialidade...">
                     </div>
 
                     <div class="table-container">
@@ -113,43 +88,49 @@
                             <thead>
                                 <tr>
                                     <th>ID</th>
-                                    <th>CONSULTA</th>
-                                    <th>PACIENTE</th>
-                                    <th>MÉDICO</th>
-                                    <th>VALOR</th>
-                                    <th>DATA PAGAMENTO</th>
-                                    <th>FORMA PAGAMENTO</th>
-                                    <th>STATUS</th> 
+                                    <th>NOME</th>
+                                    <th>CRM</th>
+                                    <th>ESPECIALIDADE</th>
+                                    <th>TELEFONE</th>
+                                    <th>STATUS</th>
                                     <th>AÇÕES</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>1</td>
-                                    <td>#1</td>
-                                    <td class="main-info">Maria Silva Santos</td>
-                                    <td>Dr. João Santos</td>
-                                    <td>R$ 150.00</td>
-                                    <td>14/09/2024</td>
-                                    <td>Cartão</td>
-                                    <td><span class="status-badge pago">pago</span></td>
-                                    <td class="actions">
-                                        <a href="../html/atualizarPagamento.html" class="action-icon info-icon"><i class="fas fa-pencil-alt"></i></a>
-                                        <a href="../html/atualizarPagamento.html" class="action-icon edit-icon"><i class="fas fa-times"></i></a>
+                                    <td class="main-info">Dr. João Santos</td>
+                                    <td>CRM/SP 123456</td>
+                                    <td>Cardiologia</td>
+                                    <td>(11) 98765-4321</td>
+                                    <td><span class="status-badge ativo">Ativo</span></td>
+                                     <td class="actions">
+                                        <a href="../html/atualizarMedico.html" class="action-icon info-icon"><i class="fas fa-pencil-alt"></i></a>
+                                        <a href="../html/Deletar/deletarMedico.html" class="action-icon edit-icon"><i class="fas fa-times"></i></a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>2</td>
-                                    <td>#2</td>
-                                    <td class="main-info">João Pedro Costa</td>
-                                    <td>Dra. Ana Lima</td>
-                                    <td>R$ 200.00</td>
-                                    <td>14/09/2024</td>
-                                    <td>PIX</td>
-                                    <td><span class="status-badge pendente">pendente</span></td>
+                                    <td class="main-info">Dra. Ana Lima</td>
+                                    <td>CRM/RJ 654321</td>
+                                    <td>Dermatologia</td>
+                                    <td>(21) 99876-5432</td>
+                                    <td><span class="status-badge ativo">Ativo</span></td>
                                    <td class="actions">
-                                        <a href="../html/atualizarPagamento.html" class="action-icon info-icon"><i class="fas fa-pencil-alt"></i></a>
-                                        <a href="../html/atualizarPagamento.html" class="action-icon edit-icon"><i class="fas fa-times"></i></a>
+                                        <a href="../html/atualizarMedico.html" class="action-icon info-icon"><i class="fas fa-pencil-alt"></i></a>
+                                        <a href="../html/Deletar/deletarMedico.html" class="action-icon edit-icon"><i class="fas fa-times"></i></a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td class="main-info">Dr. Carlos Rocha</td>
+                                    <td>CRM/MG 456789</td>
+                                    <td>Neurologia</td>
+                                    <td>(31) 97654-3210</td>
+                                    <td><span class="status-badge inativo">Inativo</span></td>
+                                  <td class="actions">
+                                        <a href="../html/atualizarMedico.html" class="action-icon info-icon"><i class="fas fa-pencil-alt"></i></a>
+                                        <a href="../html/Deletar/deletarMedico.html" class="action-icon edit-icon"><i class="fas fa-times"></i></a>
                                     </td>
                                 </tr>
                             </tbody>
