--- a/html/pagamento.html
+++ b/html/pagamento.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MediCare - Gerenciar Pacientes</title>
+    <title>MediCare - Gerenciar Pagamentos</title>
     <link rel="stylesheet" href="../css/gerenciamento.css"> 
-    <link rel="stylesheet" href="../css/pacientes.css"> 
+    <link rel="stylesheet" href="../css/pagamentos.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
                     <li class="nav-item">
                         <a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a href="pacientes.html"><i class="fas fa-user-injured"></i> Pacientes</a>
                     </li>
                     <li class="nav-item">
@@ -31,7 +31,7 @@
                     <li class="nav-item">
                         <a href="consulta.html"><i class="fas fa-calendar-check"></i> Consultas</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a href="pagamento.html"><i class="fas fa-file-invoice-dollar"></i> Pagamentos</a>
                     </li>
                     <li class="nav-item">
@@ -55,7 +55,7 @@
             <header class="page-header">
                 <div class="header-text">
                     <h1>Painel Administrativo</h1>
-                    <p>Gerencie informações dos pacientes</p>
+                    <p>Controle pagamentos de consultas</p>
                 </div>
                 <div class="header-profile">
                     <span class="notification-badge">2</span>
@@ -69,18 +69,43 @@
             <section class="management-card">
                 <div class="management-header">
                     <div class="title-section">
-                        <h2>Lista de Pacientes</h2>
-                        <p>Total de 1,247 pacientes registrados</p>
+                        <h2>Gerenciar Pagamentos</h2>
+                        <p>Controle pagamentos de consultas</p>
                     </div>
                     <button class="btn-primary new-item-btn">
-                        <a href="../html/cadastroPaciente.html" class="fas fa-user-plus"></a> Novo Paciente
+                        <a href="../html/cadastroPagamento.html" class="fas fa-user-plus"></a> Novo Pagamento
                     </button>
                 </div>
                 
+                <div class="payment-summary-grid">
+                    <div class="summary-card">
+                        <div class="card-content">
+                            <h4>Total Recebido</h4>
+                            <span class="summary-value success">R$ 150.00</span>
+                        </div>
+                        <div class="card-icon green"><i class="fas fa-money-bill-wave"></i></div>
+                    </div>
+                    <div class="summary-card">
+                        <div class="card-content">
+                            <h4>Total Pendente</h4>
+                            <span class="summary-value pending">R$ 200.00</span>
+                        </div>
+                        <div class="card-icon yellow"><i class="fas fa-wallet"></i></div>
+                    </div>
+                    <div class="summary-card">
+                        <div class="card-content">
+                            <h4>Total de Pagamentos</h4>
+                            <span class="summary-value primary">2</span>
+                        </div>
+                        <div class="card-icon blue"><i class="fas fa-receipt"></i></div>
+                    </div>
+                </div>
+
                 <div class="data-section">
+                    <h3>Lista de Pagamentos</h3>
                     <div class="search-bar">
                         <i class="fas fa-search"></i>
-                        <input type="text" placeholder="Buscar por nome, CPF ou telefone...">
+                        <input type="text" placeholder="Buscar por paciente, médico ou forma...">
                     </div>
 
                     <div class="table-container">
@@ -88,49 +113,43 @@
                             <thead>
                                 <tr>
                                     <th>ID</th>
-                                    <th>NOME</th>
-                                    <th>CPF</th>
-                                    <th>DATA NASC.</th>
-                                    <th>TELEFONE</th>
-                                    <th>ÚLTIMA CONSULTA</th>
+                                    <th>CONSULTA</th>
+                                    <th>PACIENTE</th>
+                                    <th>MÉDICO</th>
+                                    <th>VALOR</th>
+                                    <th>DATA PAGAMENTO</th>
+                                    <th>FORMA PAGAMENTO</th>
+                                    <th>STATUS</th> 
                                     <th>AÇÕES</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>1</td>
+                                    <td>#1</td>
                                     <td class="main-info">Maria Silva Santos</td>
-                                    <td>123.456.789-00</td>
-                                    <td>10/05/1985</td>
-                                    <td>(11) 98765-4321</td>
-                                    <td>15/09/2024</td>
+                                    <td>Dr. João Santos</td>
+                                    <td>R$ 150.00</td>
+                                    <td>14/09/2024</td>
+                                    <td>Cartão</td>
+                                    <td><span class="status-badge pago">pago</span></td>
                                     <td class="actions">
                                         <a href="../html/atualizarPagamento.html" class="action-icon info-icon"><i class="fas fa-pencil-alt"></i></a>
-                                        <a href="../html/atualizarPagamento.html" class="action-icon edit-icon"><i class="fas fa-times"></i></a>
+                                        <a href="../html/Deletar/deletarPagamento.html" class="action-icon edit-icon"><i class="fas fa-times"></i></a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>2</td>
+                                    <td>#2</td>
                                     <td class="main-info">João Pedro Costa</td>
-                                    <td>987.654.321-11</td>
-                                    <td>03/12/2000</td>
-                                    <td>(21) 99876-5432</td>
-                                    <td>20/08/2024</td>
-                                     <td class="actions">
+                                    <td>Dra. Ana Lima</td>
+                                    <td>R$ 200.00</td>
+                                    <td>14/09/2024</td>
+                                    <td>PIX</td>
+                                    <td><span class="status-badge pendente">pendente</span></td>
+                                   <td class="actions">
                                         <a href="../html/atualizarPagamento.html" class="action-icon info-icon"><i class="fas fa-pencil-alt"></i></a>
-                                        <a href="../html/atualizarPagamento.html" class="action-icon edit-icon"><i class="fas fa-times"></i></a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>3</td>
-                                    <td class="main-info">Ana Oliveira</td>
-                                    <td>456.789.012-22</td>
-                                    <td>25/01/1992</td>
-                                    <td>(31) 97654-3210</td>
-                                    <td>01/10/2024</td>
-                                     <td class="actions">
-                                        <a href="../html/atualizarPagamento.html" class="action-icon info-icon"><i class="fas fa-pencil-alt"></i></a>
-                                        <a href="../html/atualizarPagamento.html" class="action-icon edit-icon"><i class="fas fa-times"></i></a>
+                                        <a href="../html/Deletar/deletarPagamento.html" class="action-icon edit-icon"><i class="fas fa-times"></i></a>
                                     </td>
                                 </tr>
                             </tbody>
