funções de deletar funcionando

--- a/html/Deletar/deletarConsulta.html
+++ b/html/Deletar/deletarConsulta.html
@@ -15,7 +15,7 @@
             <p>Informe o ID da Consulta</p>
         </div>
 
-        <form class="form active" method="POST" action="../../php/Deletar/deletarConsulta.php" onsubmit="return confirmarExclusao()">
+        <form class="form active" method="POST" action="../../php/deletarConsulta.php" onsubmit="return confirmarExclusao()">
             <label for="idConsulta">ID:</label>
             <input type="number" id="idConsulta" name="id" placeholder="Digite o ID da consulta" required>
 
