--- a/html/Deletar/deletarMedico.html
+++ b/html/Deletar/deletarMedico.html
@@ -15,7 +15,7 @@
             <p>Informe o ID do Médico</p>
         </div>
 
-        <form class="form active" method="POST" action="../../php/Deletar/deletarMedico.php">
+        <form class="form active" method="POST" action="../../php/deletarMedico.php">
             <label for="idMedico">ID:</label>
             <input type="number" id="idMedico" name="id" placeholder="Digite o ID do médico" required>
 
