--- a/html/Deletar/deletarPaciente.html
+++ b/html/Deletar/deletarPaciente.html
@@ -15,7 +15,7 @@
             <p>Informe o ID do Paciente</p>
         </div>
 
-        <form class="form active" method="POST" action="../../php/Deletar/deletarPaciente.php">
+        <form class="form active" method="POST" action="../../php/deletarPaciente.php">
             <label for="idPaciente">ID:</label>
             <input type="number" id="idPaciente" name="id" placeholder="Digite o ID do paciente" required>
 
