--- a/html/Deletar/deletarPagamento.html
+++ b/html/Deletar/deletarPagamento.html
@@ -15,7 +15,7 @@
             <p>Informe o ID do Pagamento</p>
         </div>
 
-        <form class="form active" method="POST" action="../../php/deletar/deletarPagamento.php">
+        <form class="form active" method="POST" action="../../php/deletarPagamento.php">
             <label for="idPagamento">ID:</label>
             <input type="number" id="idPagamento" name="id" placeholder="Digite o ID do pagamento" required>
 
