--- a/html/Deletar/deletarReceita.html
+++ b/html/Deletar/deletarReceita.html
@@ -15,7 +15,7 @@
             <p>Informe o ID da Receita</p>
         </div>
 
-        <form class="form active" method="POST" action="../../php/Deletar/deletarReceita.php">
+        <form class="form active" method="POST" action="../../php/deletarReceita.php">
             <label for="idReceita">ID:</label>
             <input type="number" id="idReceita" name="id" placeholder="Digite o ID da receita" required>
 
